--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,13 +1,384 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!--~~~~~~~~~~~~~~~ Favicon ~~~~~~~~~~~~~~~-->
+    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+    <!--~~~~~~~~~~~~~~~ Font Awesome ~~~~~~~~~~~~~~~-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!--~~~~~~~~~~~~~~~ Remix Icon ~~~~~~~~~~~~~~~-->
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
+    <!--  Swiper's CSS -->
+
+    <!--~~~~~~~~~~~~~~~ CSS ~~~~~~~~~~~~~~~-->
+    <link href="./output.css" rel="stylesheet" />
+
+    <title>responsive || burger website</title>
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+    <!--~~~~~~~~~~~~~~~ Header ~~~~~~~~~~~~~~~-->
+    <header class="bg-primaryColor fixed top-0 left-0 w-full z-50">
+        <nav class="container h-14 flex justify-between items-center relative">
+            <!-- Logo -->
+            <div class="">
+                <a href="" class="text-2xl uppercase font-oswald">
+                    Bur<span class="text-secondaryColor ">ger</span>
+                </a>
+            </div>
+            <div class="hidden absolute top-0 left-0 w-full bg-primaryColor border-b border-secondaryColor py-14 md:block md:static md:py-0 md:border-none md:w-auto md:ml-auto" id="nav-menu">
+                <!-- Nav Items -->
+                <ul class="flex flex-col text-center gap-5 md:flex-row">
+                    <li>
+                        <a href="" class="nav__link hover:text-secondaryColor ease-in duration-200">Home</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav__link hover:text-secondaryColor ease-in duration-200">About</a>
+                    </li>
+                    <li>
+                        <a href="" class=" nav__link hover:text-secondaryColor ease-in duration-200">Menu</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav__link hover:text-secondaryColor ease-in duration-200">Review</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav__link hover:text-secondaryColor ease-in duration-200">Contact</a>
+                    </li>
+                </ul>
+                <!-- Close Icon -->
+                <div class="absolute top-[0.7rem] right-4 text-2xl cursor-pointer nav__link md:hidden">
+                    <i class="ri-close-line"></i>
+                </div>
+            </div>
+            <!-- Dark Mode Icon -->
+            <div class="flex items-center gap-5">
+                <i class="ri-moon-line cursor-pointer ml-4 text-xl"></i>
+                <!-- Menu Icon -->
+                <div class="md:hidden" id="menu-icon">
+                    <i class="ri-menu-2-line cursor-pointer text-xl"></i>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+    <!--~~~~~~~~~~~~~~~ Home ~~~~~~~~~~~~~~~-->
+<section id="home" class="">
+    <div class="container flex flex-col items-center gap-10 md:flex-row">
+        <!-- Home Image -->
+        <div class="mx-auto md:basis-1/2 lg:basis-2/5">
+            <img src="../img/home-image.png" alt="burger" class="w-60 md:w-full">
+        </div>
+        <!-- Title -->
+        <div class="text-center md:basis-1/2 md:text-start lg:basis-3/5">
+            <h1 class="home__title">Happy Tummy With Tasty Burgers</h1>
+            <!-- Separator div -->
+            <div class="separator mx-auto md:mx-0"></div>
+            <p class="paragraph">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero nam omnis odio neque sit provident saepe sunt rerum expedita ad. Incidunt iure labore earum natus eius sed minus tempora beatae!
+            </p>
+            <div class="text-base flex items-center justify-center gap-4 py-10 md:justify-start md:gap-20">
+                <div class="text-center">
+                    <i class="fa-solid fa-utensils text-4xl text-secondaryColor"></i>
+                    <br>
+                    Delicious
+                </div>
+                <div class="text-center">
+                    <i class="fa-solid fa-droplet text-4xl text-secondaryColor"></i>
+                    <br>
+                    Fresh
+                </div>
+                <div class="text-center">
+                    <i class="fa-brands fa-envira text-4xl text-secondaryColor"></i>
+                    <br>
+                    Organic
+                </div>
+            </div>
+            <a href="" class="btn btn-primary">
+                Learn More 
+            </a>
+        </div>
+    </div>
+</section>
+    <!--~~~~~~~~~~~~~~~ Category ~~~~~~~~~~~~~~~-->
+<section id="category" class="">
+    <div class="container flex flex-col gap-5 md:flex-row">
+        <!-- Card 1 -->
+        <div class="bg-secondaryColor flex py-3 rounded-lg overflow-hidden md:flex-1">
+            <div class="basis-1/3 relative">
+                <img src="../img/burger-1.png" alt="category-img" class="absolute w-28 -bottom-4 -left-4">
+            </div>
+            <div class="">
+                <div class="mb-2">
+                    <h4 class="card__title">Food</h4>
+                    <p class="text-xs">
+                        Lorem ipsum dolor sit.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- Card 2 -->
+        <div class="bg-redColor flex py-3 rounded-lg overflow-hidden md:flex-1">
+            <div class="basis-1/3 relative">
+                <img src="../img/snack-1.png" alt="category-img" class="absolute w-28 -bottom-4 -left-4">
+            </div>
+            <div class="">
+                <div class="mb-2">
+                    <h4 class="card__title">Snack</h4>
+                    <p class="text-xs">
+                        Lorem ipsum dolor sit.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- Card 3 -->
+        <div class="bg-greenColor flex py-3 rounded-lg overflow-hidden md:flex-1">
+            <div class="basis-1/3 relative">
+                <img src="../img/beverage-2.png" alt="category-img" class="absolute w-28 -bottom-4 -left-4">
+            </div>
+            <div class="">
+                <div class="mb-2">
+                    <h4 class="card__title">Beverage</h4>
+                    <p class="text-xs">
+                        Lorem ipsum dolor sit.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+    <!--~~~~~~~~~~~~~~~ Promo ~~~~~~~~~~~~~~~-->
+<section id="promo">
+    <div class="container flex flex-col gap-5 md:flex-row md:gap-10">
+        <!-- Card-1 -->
+        <div class="bg-primaryColorLight flex flex-col p-5 rounded-lg md:flex-row md:items-center lg:flex-row-reverse lg:flex-1">
+            <img src="../img/promo-1.png" alt="promo-img" class="w-40 mx-auto md:mx-5">
+
+            <div class="space-y-2 pt-5 md:pt-0">
+                <p class="text-sm text-secondaryColor">Promoday promo</p>
+                <h3 class="card__title">Get a 10% discount on payday week</h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, facere?
+                </p>
+                <a href="" class="text-sm text-secondaryColor">Buy Online</a>
+            </div>
+        </div>
+        <!-- Card-2 -->
+        <div class="bg-primaryColorLight flex flex-col p-5 rounded-lg md:flex-row md:items-center lg:flex-row-reverse lg:flex-1">
+            <img src="../img/promo-2.png" alt="promo-img" class="w-40 mx-auto md:mx-5">
+
+            <div class="space-y-2 pt-5 md:pt-0">
+                <p class="text-sm text-secondaryColor">Promoday promo</p>
+                <h3 class="card__title">Get a 10% discount on payday week</h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, facere?
+                </p>
+                <a href="" class="text-sm text-secondaryColor">Buy Online</a>
+            </div>
+        </div>
+    </div>
+</section>
+    <!--~~~~~~~~~~~~~~~ About ~~~~~~~~~~~~~~~-->
+<section id="about">
+    <div class="container flex flex-col gap-10 md:flex-row">
+        <div class="flex-1">
+            <img src="../img/about.jpg" alt="" class="rounded-lg">
+        </div>
+        <div class="flex-1">
+            <h2 class="section__title">
+                Find food and drinks all-in-one place for your best taste.
+            </h2>
+            <div class="separator"></div>
+            <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolore natus tempore vel dolorum fugit laudantium distinctio atque impedit quam!
+            </p>
+            <ul class="grid grid-cols-2 py-5 space-y-1">
+                <li class="text-sm text-paragraphColor">
+                    <i class="fa-solid fa-check text-secondaryColor"></i>
+                    Best Price
+                </li>
+                <li class="text-sm text-paragraphColor">
+                    <i class="fa-solid fa-check text-secondaryColor"></i>
+                    Fresh Ingredient
+                </li>
+                <li class="text-sm text-paragraphColor">
+                    <i class="fa-solid fa-check text-secondaryColor"></i>
+                    Best Service</li>
+                <li class="text-sm text-paragraphColor">
+                    <i class="fa-solid fa-check text-secondaryColor"></i>
+                    Health Protocol
+                </li>
+            </ul>
+            <a href="" class="btn btn-primary">About Us</a>
+        </div>
+    </div>
+</section>
+    <!--~~~~~~~~~~~~~~~ Menu ~~~~~~~~~~~~~~~-->
+<section id="menu">
+    <div class="container">
+        <div class="max-w-md mx-auto text-center">
+            <h2 class="section__title">
+                Our best Menu
+            </h2>
+            <div class="separator mx-auto"></div>
+            <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa, mollitia.
+            </p>
+            <div class="tabs_wrap">
+                <ul class="flex flex-wrap justify-center gap-3 py-10 ">
+                    <li class="btn bg-primaryColorLight active tab">
+                        All
+                    </li>
+                    <li class="btn bg-primaryColorLight tab">
+                        Food
+                    </li>
+                    <li class="btn bg-primaryColorLight tab">
+                        Snack
+                    </li>
+                    <li class="btn bg-primaryColorLight tab">
+                        Beverage
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="">
+            <ul class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-4 lg:gap-12">
+                <!-- Card-1 -->
+                <li>
+                    <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
+                        <img src="../img/burger-1.png" alt="food-img" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+                    </div>
+                    <div class="pt-5">
+                        <div class="mb-2">
+                            <h4 class="card__title">
+                                Regular beef burger
+                            </h4>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, commodi.
+                            </p>
+                        </div>
+                        <p class="text-secondaryColor">
+                            $42.00
+                        </p>
+                    </div>
+                </li>
+                <!-- Card-2 -->
+                <li>
+                    <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
+                        <img src="../img/burger-2.png" alt="food-img" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+                    </div>
+                    <div class="pt-5">
+                        <div class="mb-2">
+                            <h4 class="card__title">
+                                Regular beef burger
+                            </h4>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, commodi.
+                            </p>
+                        </div>
+                        <p class="text-secondaryColor">
+                            $42.00
+                        </p>
+                    </div>
+                </li>
+                <!-- Card-3 -->
+                <li>
+                    <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
+                        <img src="../img/burger-3.png" alt="food-img" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+                    </div>
+                    <div class="pt-5">
+                        <div class="mb-2">
+                            <h4 class="card__title">
+                                Regular beef burger
+                            </h4>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, commodi.
+                            </p>
+                        </div>
+                        <p class="text-secondaryColor">
+                            $42.00
+                        </p>
+                    </div>
+                </li>
+                <!-- Card-4 -->
+                <li>
+                    <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
+                        <img src="../img/burger-4.png" alt="food-img" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+                    </div>
+                    <div class="pt-5">
+                        <div class="mb-2">
+                            <h4 class="card__title">
+                                Regular beef burger
+                            </h4>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, commodi.
+                            </p>
+                        </div>
+                        <p class="text-secondaryColor">
+                            $42.00
+                        </p>
+                    </div>
+                </li>
+                <!-- Card-5 -->
+                <li>
+                    <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
+                        <img src="../img/burger-5.png" alt="food-img" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+                    </div>
+                    <div class="pt-5">
+                        <div class="mb-2">
+                            <h4 class="card__title">
+                                Regular beef burger
+                            </h4>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, commodi.
+                            </p>
+                        </div>
+                        <p class="text-secondaryColor">
+                            $42.00
+                        </p>
+                    </div>
+                </li>
+                <!-- Card-6 -->
+                <li>
+                    <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40">
+                        <img src="../img/burger-6.png" alt="food-img" class="w-40 hover:scale-110 ease-linear duration-200 md:w-48 lg:w-24">
+                    </div>
+                    <div class="pt-5">
+                        <div class="mb-2">
+                            <h4 class="card__title">
+                                Regular beef burger
+                            </h4>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, commodi.
+                            </p>
+                        </div>
+                        <p class="text-secondaryColor">
+                            $42.00
+                        </p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+    <!--~~~~~~~~~~~~~~~ Review ~~~~~~~~~~~~~~~-->
+
+    <!--~~~~~~~~~~~~~~~ Contact ~~~~~~~~~~~~~~~-->
+    </main>
+    <!--~~~~~~~~~~~~~~~ Footer ~~~~~~~~~~~~~~~-->
+    <footer></footer>
+
+    <!--~~~~~~~~~~~~~~~ Scroll Up ~~~~~~~~~~~~~~~-->
+
+    <!--~~~~~~~~~~~~~~~ Swiper JS ~~~~~~~~~~~~~~~-->
+
+    <!--~~~~~~~~~~~~~~~ Scroll Reveal ~~~~~~~~~~~~~~~-->
+
+    <!--~~~~~~~~~~~~~~~ Main.js ~~~~~~~~~~~~~~~-->
+    <script src="./main.js"></script>
 </body>
 </html>
